--- a/MNIST_Handwritten.ipynb
+++ b/MNIST_Handwritten.ipynb
@@ -6,7 +6,7 @@
       "name": "MNIST_Handwritten.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNcP3dSddc8d/hWTkx92L34",
+      "authorship_tag": "ABX9TyN+AMEpNT7HL7DHQpqxaGR3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,6 +61,81 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mnist = tf.keras.datasets.mnist # Object of the MNIST dataset\n",
+        "(train_images, train_labels), (test_images, test_labels) = mnist.load_data() # Load data"
+      ],
+      "metadata": {
+        "id": "zkEU-7et5WiV"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_images.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jKN5_8s65piJ",
+        "outputId": "c48e31fc-7980-4514-84c6-f34a6f670199"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(60000, 28, 28)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_labels[:10]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pis2gHKg5xra",
+        "outputId": "d455d193-fb70-4e91-b5b8-6e3e9dfc42e9"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5, 0, 4, 1, 9, 2, 1, 3, 1, 4], dtype=uint8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "TeG3YLdo59vn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
