Predicting the model

--- a/MNIST_Handwritten.ipynb
+++ b/MNIST_Handwritten.ipynb
@@ -6,7 +6,7 @@
       "name": "MNIST_Handwritten.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOAsanWKLdGodtq4hPztErl",
+      "authorship_tag": "ABX9TyNJo+q7Wg1S3qb7vjDIWKgf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,13 +52,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4XDtrnb02e8O",
-        "outputId": "2b5762a3-2980-4319-bbca-76306cf095b0"
+        "outputId": "73140ce2-348b-435b-fda1-1324d0fb579b"
       },
       "outputs": [
         {
@@ -69,7 +69,7 @@
             "You set: `2.x  # this line is not required unless you are in a notebook`. This will be interpreted as: `2.x`.\n",
             "\n",
             "\n",
-            "TensorFlow 2.x selected.\n"
+            "TensorFlow is already loaded. Please restart the runtime to change versions.\n"
           ]
         }
       ],
@@ -104,24 +104,10 @@
         "(train_images, train_labels), (test_images, test_labels) = mnist.load_data() # Load data"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zkEU-7et5WiV",
-        "outputId": "235e78c1-0751-4f60-fcbd-d789e049f48b"
+        "id": "zkEU-7et5WiV"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 0s 0us/step\n",
-            "11501568/11490434 [==============================] - 0s 0us/step\n"
-          ]
-        }
-      ]
+      "execution_count": 18,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -133,9 +119,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jKN5_8s65piJ",
-        "outputId": "10f740e6-9434-4760-8dbc-fbd5f48063b0"
+        "outputId": "d1d54424-4056-446a-d8e6-e01e54e4815c"
       },
-      "execution_count": 3,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,7 +131,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 19
         }
       ]
     },
@@ -159,9 +145,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FrQdzEQvnEPq",
-        "outputId": "1d0591cc-b4e1-438d-86be-a9c76c0524eb"
+        "outputId": "1a0c96c8-2759-4545-d25b-6f73dedcbd93"
       },
-      "execution_count": 13,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,18 +157,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 20
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Verifying Class Labels"
-      ],
-      "metadata": {
-        "id": "vgI1GS_4nizZ"
-      }
     },
     {
       "cell_type": "code",
@@ -194,9 +171,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9ADHmdMa8aFJ",
-        "outputId": "22fe4254-cc81-4227-996a-d6a8f8382fc0"
+        "outputId": "b5017419-1679-4b0f-ec64-c2fe097c1e6d"
       },
-      "execution_count": 12,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,9 +183,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 21
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Plotting\n",
+        "\n",
+        "Verifying the class labels by visually plotting them."
+      ],
+      "metadata": {
+        "id": "vgI1GS_4nizZ"
+      }
     },
     {
       "cell_type": "code",
@@ -220,9 +208,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pis2gHKg5xra",
-        "outputId": "1608a189-d36d-4673-b6df-ef61968ae58d"
+        "outputId": "60d06f23-c01a-40c8-e802-2fa41dbe8953"
       },
-      "execution_count": 4,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -232,7 +220,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 22
         }
       ]
     },
@@ -254,9 +242,9 @@
           "height": 268
         },
         "id": "TeG3YLdo59vn",
-        "outputId": "8701264c-25e4-4ebf-e576-fbbbc9d3d8fd"
+        "outputId": "d126b2b6-a094-49f5-c8c4-90410788efde"
       },
-      "execution_count": 11,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -271,6 +259,287 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Data Pre-Processing\n",
+        "\n",
+        "Grayscale image are in the range of 0-255 pixels. We will scale them between 0-1. "
+      ],
+      "metadata": {
+        "id": "awkL-Xy5njs7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_images = train_images / 255.0\n",
+        "\n",
+        "test_images = test_images / 255.0"
+      ],
+      "metadata": {
+        "id": "fqNOkVldnbWr"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Build the Model\n",
+        "\n",
+        "Using Sequantial Feed Forward Neural Network by Keras. \n",
+        "\n",
+        "We will have 3 layers.\n",
+        "\n",
+        "\n",
+        "**First layer** will have input of 784 neurons as image size is 28*28 (784 pixels) so one neuron for one pixel.\n",
+        "\n",
+        "\n",
+        "**Second layer** is hidden layer having activation function of relu. It has 128 neurons.\n",
+        "\n",
+        "\n",
+        "**Third layer** is output layer which will contain 10 neurons as we are classifying digits in the range of 0-9."
+      ],
+      "metadata": {
+        "id": "hbshIqxtokYX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = keras.Sequential([\n",
+        "    keras.layers.Flatten(input_shape=(28, 28)),  # input layer (1)\n",
+        "    keras.layers.Dense(128, activation='relu'),  # hidden layer (2)\n",
+        "    keras.layers.Dense(10, activation='softmax') # output layer (3)\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "X_pB2RPnonMm"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(optimizer='adam',\n",
+        "              loss='sparse_categorical_crossentropy',\n",
+        "              metrics=['accuracy'])"
+      ],
+      "metadata": {
+        "id": "JY3gAuDs-ccy"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Training the Model"
+      ],
+      "metadata": {
+        "id": "POxzZK1A-ukw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(train_images, train_labels, epochs=10)  # we pass the data, labels and epochs and watch the magic!"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rXzABH42-0i8",
+        "outputId": "c7f31449-727e-42e5-ff8a-b78b1a9e4e95"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2617 - accuracy: 0.9251\n",
+            "Epoch 2/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.1153 - accuracy: 0.9657\n",
+            "Epoch 3/10\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0788 - accuracy: 0.9761\n",
+            "Epoch 4/10\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0581 - accuracy: 0.9820\n",
+            "Epoch 5/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0447 - accuracy: 0.9863\n",
+            "Epoch 6/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0338 - accuracy: 0.9895\n",
+            "Epoch 7/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0277 - accuracy: 0.9917\n",
+            "Epoch 8/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0230 - accuracy: 0.9929\n",
+            "Epoch 9/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0194 - accuracy: 0.9941\n",
+            "Epoch 10/10\n",
+            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0149 - accuracy: 0.9953\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f37a9d6de10>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Evaluate the Model"
+      ],
+      "metadata": {
+        "id": "Zg3AWpHO_bZ6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_loss, test_acc = model.evaluate(test_images,  test_labels, verbose=1) \n",
+        "\n",
+        "print('Test accuracy:', test_acc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0mZxSTMD_d3i",
+        "outputId": "847e2eb7-226b-48f5-a388-3aee264fd858"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 [==============================] - 1s 2ms/step - loss: 0.0823 - accuracy: 0.9778\n",
+            "Test accuracy: 0.9778000116348267\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Predicting the Model"
+      ],
+      "metadata": {
+        "id": "4h7Jsfh8_0BD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = model.predict(test_images)"
+      ],
+      "metadata": {
+        "id": "zkzlKATl_oqz"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DkbVY_V2AQV4",
+        "outputId": "6885e8b2-af20-46dc-e429-4b6d0a60771b"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2.6046887e-09, 4.3066006e-10, 7.6371755e-08, 1.7614228e-05,\n",
+              "       4.3817150e-15, 3.4943080e-11, 7.4859476e-15, 9.9998128e-01,\n",
+              "       7.5839699e-09, 8.8979948e-07], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.argmax(predictions[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S0qQ2X8mASi3",
+        "outputId": "f6ce3310-63ce-4f47-cb66-f12788b13b96"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_labels[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AQp2GGmCAWwZ",
+        "outputId": "aaf40d36-2275-438d-c0f8-abc5fce772f8"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "BnPDcTOaAibF"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
