--- a/MNIST_Handwritten.ipynb
+++ b/MNIST_Handwritten.ipynb
@@ -6,7 +6,7 @@
       "name": "MNIST_Handwritten.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQ4EMAN95DquFMOKfnNFIN",
+      "authorship_tag": "ABX9TyPZCJ58/eQLu9sq0t29u021",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,18 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/hatimkh20/mnist_handwritten/blob/main/MNIST_Handwritten.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Deep Learning Assignment 01**\n",
+        "\n",
+        "Submitted by:\n",
+        "Hatim Khuzema (CS182003) "
+      ],
+      "metadata": {
+        "id": "QNOmagLVC8HS"
+      }
     },
     {
       "cell_type": "markdown",
